完善纯springboot访问程序，零配置

--- a/config/template/db.properties.vm
+++ b/config/template/db.properties.vm
@@ -2,3 +2,6 @@ mysql.jdbc.driver=$!{driversClass}
 mysql.jdbc.url=$!{connetionURL}
 mysql.jdbc.username=$!{userName}
 mysql.jdbc.password=$!{passWord}
+spring.datasource.max-active=10
+spring.datasource.max-idle=5
+spring.datasource.min-idle=0
