--- a/config/template/springbootEntityDao.vm
+++ b/config/template/springbootEntityDao.vm
@@ -1,5 +1,6 @@
 package ${package}.repository;
 
+import ${package}.dynamicsql.$!{table.getUpperCaseName()}Sql;
 import ${package}.entity.$!{table.getUpperCaseName()}Entity;
 import java.util.List;
 import java.util.Map;
