--- a/config/template/entity.vm
+++ b/config/template/entity.vm
@@ -11,26 +11,22 @@ import java.util.Date;
  */
 public class $!{table.getUpperCaseName()}Entity  implements Serializable {
 	private static final long serialVersionUID = 1L;
-	
+
 	#foreach($col in $!table.columns)
-	
-		/**
-		 * $!{col.desc}
-		 */
-		#if($!{col.pk}=="1")		
-		#end		
-		private $!{col.javaType} $!{col.javaname};
-	#end
-	
-	
-	#foreach($col in $!table.columns)
-		public $!{col.javaType} get$!{col.getUpperCol("${col.javaname}")}() {
-			return $!{col.javaname};
-		}
-		public void set$!{col.getUpperCol("${col.javaname}")}($!{col.javaType} $!{col.javaname}) {
-			this.$!{col.javaname} = $!{col.javaname};
-		}
-	#end
-	
-	
+
+	/**
+	* $!{col.desc}
+	*/
+#if($!{col.pk}=="1")#end
+    private $!{col.javaType} $!{col.javaname};
+#end
+
+#foreach($col in $!table.columns)
+	public $!{col.javaType} get$!{col.getUpperCol("${col.javaname}")}() {
+		return $!{col.javaname};
+	}
+	public void set$!{col.getUpperCol("${col.javaname}")}($!{col.javaType} $!{col.javaname}) {
+		this.$!{col.javaname} = $!{col.javaname};
+	}
+#end
 }
