--- a/config/template/web/DemoController.vm
+++ b/config/template/web/DemoController.vm
@@ -1,4 +1,4 @@
-package com.spring.mybatis.user.web.controller;
+package ${package}.controller;
 
 import javax.annotation.Resource;
 import javax.servlet.http.HttpServletRequest;
@@ -10,14 +10,12 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.ResponseBody;
 import com.alibaba.fastjson.JSON;
-import com.spring.mybatis.user.web.entity.DemoEntity;
-import com.spring.mybatis.user.web.service.DemoService;
 
 @Controller
 @RequestMapping("/demo")
 public class DemoController {
-	@Resource
-	private DemoService demoService;
+	//@Autowired
+	//private DemoService demoService;
 
 	@ResponseBody
 	@RequestMapping("/info")
@@ -27,7 +25,8 @@ public class DemoController {
 		return "fjsh web";
 	}
 
-	// http://localhost:8080/com_spring_mybatis_user_web/demo/basicjsoninfo
+	/*
+    // http://localhost:8080/com_spring_mybatis_user_web/demo/basicjsoninfo
 	@ResponseBody
 	@RequestMapping("/basicjsoninfo")
 	public String getbasicInfo(HttpServletRequest request,
@@ -82,5 +81,5 @@ public class DemoController {
 				.selectByPrimaryKey(Long.valueOf(id));
 		model.put("user", demoEntity.getName());
 		return "demo";
-	}
+	}*/
 }
